[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/spirtesheet.png" type="Texture" id=1]
[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://entities/Planet.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/Asteroid.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/MainGame.gd" type="Script" id=6]
[ext_resource path="res://scenes/HUD.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[node name="MainGame" type="Node"]
script = ExtResource( 6 )
target_planet = NodePath("Space/Planets/Earth")
asteroid = ExtResource( 5 )

[node name="GameClock" type="Timer" parent="."]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 7 )

[node name="Top" type="HBoxContainer" parent="CanvasLayer/HUD"]
anchor_right = 1.0

[node name="Wave" type="HBoxContainer" parent="CanvasLayer/HUD/Top"]
margin_right = 317.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/HUD/Top/Wave"]
margin_top = 2.0
margin_right = 156.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Wave #"
align = 2

[node name="AmountLabel" type="Label" parent="CanvasLayer/HUD/Top/Wave"]
margin_left = 160.0
margin_top = 2.0
margin_right = 317.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "1"

[node name="Money" type="HBoxContainer" parent="CanvasLayer/HUD/Top"]
margin_left = 321.0
margin_right = 638.0
margin_bottom = 16.0
size_flags_horizontal = 3
alignment = 1

[node name="MoneyTexture" type="TextureRect" parent="CanvasLayer/HUD/Top/Money"]
margin_left = 146.0
margin_right = 162.0
margin_bottom = 16.0
texture = SubResource( 5 )

[node name="Label" type="Label" parent="CanvasLayer/HUD/Top/Money"]
margin_left = 166.0
margin_top = 2.0
margin_right = 171.0
margin_bottom = 14.0
text = "0"

[node name="Phase" type="HBoxContainer" parent="CanvasLayer/HUD/Top"]
margin_left = 642.0
margin_right = 960.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="PhaseLabel" type="Label" parent="CanvasLayer/HUD/Top/Phase"]
margin_top = 2.0
margin_right = 157.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Prepare !"
align = 1

[node name="PhaseProgress" type="ProgressBar" parent="CanvasLayer/HUD/Top/Phase"]
margin_left = 161.0
margin_right = 318.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 2
step = 1.0
rounded = true

[node name="Bottom" type="HBoxContainer" parent="CanvasLayer/HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Space" type="Node2D" parent="."]

[node name="Planets" type="Node2D" parent="Space"]

[node name="Mercury" parent="Space/Planets" instance=ExtResource( 4 )]
position = Vector2( -357, -225 )
pixel_size = 16
mass = 128
well_radius = 128

[node name="GravityWell" parent="Space/Planets/Mercury" index="0"]
mass = 128
well_radius = 128

[node name="Sprite" parent="Space/Planets/Mercury" index="1"]
region_rect = Rect2( 0, 16, 16, 16 )

[node name="Venus" parent="Space/Planets" instance=ExtResource( 4 )]
position = Vector2( -365, 123 )
pixel_size = 32
mass = 1000
well_radius = 256
has_indicator = false

[node name="Sprite" parent="Space/Planets/Venus" index="1"]
region_rect = Rect2( 32, 32, 32, 32 )

[node name="Indicator" parent="Space/Planets/Venus/PlayerDetector" index="0"]
region_rect = Rect2( 80, 144, 16, 16 )

[node name="Earth" parent="Space/Planets" instance=ExtResource( 4 )]
pixel_size = 32
mass = 1000
well_radius = 256

[node name="Indicator" parent="Space/Planets/Earth/PlayerDetector" index="0"]
region_rect = Rect2( 96, 144, 16, 16 )

[node name="Asteroids" type="Node2D" parent="Space"]

[node name="Asteroid" parent="Space/Asteroids" instance=ExtResource( 5 )]
position = Vector2( 74, -65 )

[node name="Turrets" type="Node2D" parent="Space"]

[node name="Projectiles" type="Node2D" parent="Space"]

[node name="Player" parent="Space" instance=ExtResource( 2 )]
position = Vector2( -34, -9 )

[connection signal="timeout" from="GameClock" to="." method="_on_GameClock_timeout"]
[connection signal="fire_ze_missile" from="Space/Player" to="." method="_on_Player_fire_ze_missile"]

[editable path="Space/Planets/Mercury"]
[editable path="Space/Planets/Mercury/PlayerDetector"]
[editable path="Space/Planets/Venus"]
[editable path="Space/Planets/Venus/PlayerDetector"]
[editable path="Space/Planets/Earth"]
[editable path="Space/Planets/Earth/PlayerDetector"]
